<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/drawer_layout"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".AgregarPedidoActivity">
  
  <ScrollView
    android:id="@+id/contenido_pedido"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:padding="16dp">
      
      <TextView
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:text="@string/agregar_pedido_label_cliente"
			      android:textSize="16sp"
	android:layout_marginBottom="4dp" />
      
      <EditText
	android:id="@+id/etNombreCliente"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:hint="@string/agregar_pedido_placeholder_cliente"
	android:inputType="textPersonName"
	android:layout_marginBottom="12dp" />
      
      <TextView
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:text="@string/agregar_pedido_select_producto"
	android:textSize="16sp"
	android:layout_marginBottom="8dp" />
    
    <ScrollView
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:fillViewport="true">

      <LinearLayout
        android:id="@+id/llProductosPedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

    </ScrollView>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:gravity="center_vertical"
      android:layout_marginTop="12dp">

      <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/agregar_pedido_label_total"
        android:textSize="18sp" />

      <TextView
        android:id="@+id/tvTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agregar_pedido_def_cantidad"
        android:textSize="18sp" />

    </LinearLayout>

    <Button
      android:id="@+id/btnConfirmarPedido"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/agregar_pedido_btn_confirmar_pedido"
      android:layout_marginTop="8dp" />
    </LinearLayout>
  </ScrollView>
</androidx.drawerlayout.widget.DrawerLayout>
